--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -18,7 +18,11 @@
     <h2>Add a New Movie</h2>
     <form id="movie-form">
         <input type="text" id="movie-title" placeholder="Movie Title" required>
-        <textarea id="movie-description" placeholder="Movie Description" required></textarea>
+        <input type="text" id="movie-image-url" placeholder="Image URL" required>
+        <input type="number" id="movie-year" placeholder="Year" required>
+        <input type="number" id="movie-director-id" placeholder="Director ID" required>
+        <input type="text" id="movie-genres" placeholder="Genres (comma-separated)" required>
+        <input type="text" id="movie-actors" placeholder="Actors (comma-separated)" required>
         <button type="submit" class="button">Add Movie</button>
     </form>
 </div>
